--- a/crud/libreria/templates/Estudiantes/index.html
+++ b/crud/libreria/templates/Estudiantes/index.html
@@ -9,7 +9,7 @@
         <a name="" id="" class="btn btn-success" href="{% url 'crear_estudiante'%}" role="button">Agregar Nuevo Estudiante</a>
     </div>
     <div class="card-body">
-        <h4 class="card-title">Estudiantes</h4>
+        <h4 class="card-title">Estudiantesssssss</h4>
         <table class="table">
             <thead>
                 <tr>
