--- a/crud/libreria/templates/base.html
+++ b/crud/libreria/templates/base.html
@@ -16,7 +16,10 @@
           <div class="nav navbar-nav">
               <a class="nav-item nav-link active" href="{% url 'inicio' %}">Inicio <span class="visually-hidden">(current)</span></a>
               <a class="nav-item nav-link" href="{% url 'estudiantes' %}">Estudiantes</a>
-              <a class="nav-item nav-link" href="{% url 'nosotros' %}">nosotros</a>
+              <a class="nav-item nav-link" href="{% url 'clases' %}">Clases</a>
+              <a class="nav-item nav-link" href="{% url 'profesor' %}">profesores</a>
+              <a class="nav-item nav-link" href="{% url 'asignaturas' %}">Asignaturas</a>
+              
           </div>
       </nav>
       
