--- a/crud/libreria/templates/Estudiantes/form.html
+++ b/crud/libreria/templates/Estudiantes/form.html
@@ -1,9 +1,24 @@
-<form enctype="multipart/form-data" method="post"> 
 
+
+<form  enctype="multipart/form-data" method="POST"> 
+ 
+  {% csrf_token %}
+  {% for campo in formulario %}
     <div class="mb-3">
-      <label for="" class="form-label">Nombre:</label>
-      <input type="text"
-        class="form-control" name="" id="" aria-describedby="helpId" placeholder="nombre">
+      <label for="" class="form-label">{{campo.label}}</label>
+      
+      <input type="{{campo.field.widget.input_type}}"
+      class="form-control" 
+      name="{{campo.name}}" 
+      id="" 
+      aria-describedby="helpId" 
+      placeholder="{{campo.label}}"
+      value="{{ campo.value | default:''}}"/>
+      
     </div>
-
+    <!-- <div class="col-12 help-text">{{campo.errors}}</div> -->
+    {% endfor %}
+    <!-- <a name="" id="" class="btn btn-success" href="#" role="button">Enviar</a> -->
+    <input name="" id="" class="btn btn-success" type="submit" value="Enviar">
+    <a name="" id="" class="btn btn-danger" href="{% url 'estudiantes' %}">Cancelar</a>
 </form>
