--- a/crud/libreria/templates/Estudiantes/form.html
+++ b/crud/libreria/templates/Estudiantes/form.html
@@ -16,7 +16,7 @@
       value="{{ campo.value | default:''}}"/>
       
     </div>
-    <!-- <div class="col-12 help-text">{{campo.errors}}</div> -->
+    <div class="col-12 help-text">{{campo.errors}}</div>
     {% endfor %}
     <!-- <a name="" id="" class="btn btn-success" href="#" role="button">Enviar</a> -->
     <input name="" id="" class="btn btn-success" type="submit" value="Enviar">
