--- a/crud/libreria/templates/asignaturas/index.html
+++ b/crud/libreria/templates/asignaturas/index.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
-{% block titulo %} lista de estudiantes {% endblock %}
+{% block titulo %} lista de asignaturas {% endblock %}
 
 {% block contenido %} 
 
 <div class="card">
     <div class="card-header">
-        <a name="" id="" class="btn btn-success" href="{% url 'crear_estudiante'%}" role="button">Agregar Nuevo profesor</a>
+        <a name="" id="" class="btn btn-success" href="{% url 'crear_asignatura'%}" role="button">Agregar Nueva asignatura</a>
     </div>
     <div class="card-body">
-        <h4 class="card-title">Profesor</h4>
+        <h4 class="card-title">Asignatura</h4>
         <table class="table">
             <thead>
                 <tr>
@@ -22,16 +22,15 @@
                 </tr>
             </thead>
             <tbody>
-                {% for estu in estudiantes %}
+                {% for asi in asignaturas %}
                 <tr>
-                    <td>{{estu.id}}</td>
-                    <td>{{estu.nombre}}</td>
-                    <td>{{estu.apellido}}</td>
-                    <td>{{estu.correo}}</td>
-                    <td>{{estu.numero}}</td>
-                    <td>{{estu.id}}</td>
-                    <td><a name="" id="" class="btn btn-info" href="{% url 'editar'%}" role="button">Editar</a>
-                    <a name="" id="" class="btn btn-danger" href="#" role="button">borrar</a>
+                    <td>{{asi.id}}</td>
+                    <td>{{asi.nombre}}</td>
+                    <td>{{asi.salon}}</td>
+                    <td>{{asi.horario}}</td>
+                    <td>{{asi.profesor}}</td>
+                    <td><a name="" id="" class="btn btn-info" href="{% url 'editara' asi.id %}" role="button">Editar</a>
+                    <a name="" id="" class="btn btn-danger" href="{% url 'eliminara' asi.id %}" role="button">borrar</a>
                     </td>
                 </tr>
                 {% endfor %}
