--- a/crud/libreria/templates/Estudiantes/index.html
+++ b/crud/libreria/templates/Estudiantes/index.html
@@ -30,7 +30,7 @@
                     <td>{{estu.apellido}}</td>
                     <td>{{estu.correo}}</td>
                     <td>{{estu.numero}}</td>
-                    <td>{{estu.id}}</td>
+                    <td>{{estu.programa}}</td>
                     <td><a name="" id="" class="btn btn-info" href="{% url 'editar' estu.id %}" role="button">Editar</a>
                     <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' estu.id %}" role="button">borrar</a>
                     </td>
