--- a/crud/libreria/templates/profesor/index.html
+++ b/crud/libreria/templates/profesor/index.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block titulo %} lista de estudiantes {% endblock %}
+{% block titulo %} lista de profesor {% endblock %}
 
 {% block contenido %} 
 
 <div class="card">
     <div class="card-header">
-        <a name="" id="" class="btn btn-success" href="{% url 'crear_estudiante'%}" role="button">Agregar Clases</a>
+        <a name="" id="" class="btn btn-success" href="{% url 'crear_profesor'%}" role="button">Agregar Profesor</a>
     </div>
     <div class="card-body">
         <h4 class="card-title">Profesor</h4>
@@ -20,16 +20,13 @@
                 </tr>
             </thead>
             <tbody>
-                {% for estu in estudiantes %}
+                {% for pro in profesor %}
                 <tr>
-                    <td>{{estu.id}}</td>
-                    <td>{{estu.nombre}}</td>
-                    <td>{{estu.apellido}}</td>
-                    <td>{{estu.correo}}</td>
-                    <td>{{estu.numero}}</td>
-                    <td>{{estu.id}}</td>
-                    <td><a name="" id="" class="btn btn-info" href="{% url 'editar'%}" role="button">Editar</a>
-                    <a name="" id="" class="btn btn-danger" href="#" role="button">borrar</a>
+                    <td>{{pro.id}}</td>
+                    <td>{{pro.nombre}}</td>
+                    <td>{{pro.apellido}}</td>
+                    <td><a name="" id="" class="btn btn-info" href="{% url 'editarp' pro.id %}" role="button">Editar</a>
+                        <a name="" id="" class="btn btn-danger" href="{% url 'eliminarp' pro.id %}" role="button">borrar</a>
                     </td>
                 </tr>
                 {% endfor %}
